syntax = "proto2";

package server;

import "google/protobuf/duration.proto";
import "cloud/disk_manager/internal/pkg/auth/config/config.proto";
import "cloud/disk_manager/internal/pkg/clients/nbs/config/config.proto";
import "cloud/disk_manager/internal/pkg/clients/nfs/config/config.proto";
import "cloud/disk_manager/internal/pkg/dataplane/config/config.proto";
import "cloud/tasks/logging/config/config.proto";
import "cloud/disk_manager/internal/pkg/monitoring/config/config.proto";
import "cloud/disk_manager/internal/pkg/performance/config/config.proto";
import "cloud/tasks/persistence/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/disks/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/filesystem/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/images/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/placementgroup/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/pools/config/config.proto";
import "cloud/disk_manager/internal/pkg/services/snapshots/config/config.proto";
import "cloud/tasks/config/config.proto";
import "cloud/tasks/tracing/config/config.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/configs/server/config";

////////////////////////////////////////////////////////////////////////////////

message Cert {
    optional string CertFile = 1;
    optional string PrivateKeyFile = 2;
}

////////////////////////////////////////////////////////////////////////////////

message KeepAliveConfig {
    optional string Time = 1 [default = "10s"];
    optional string Timeout = 2 [default = "1s"];
    optional string MinTime = 3 [default = "1s"];
    optional bool PermitWithoutStream = 4 [default = true];
}

////////////////////////////////////////////////////////////////////////////////

message GrpcConfig {
    optional uint32 Port = 1 [default = 9797];
    repeated Cert Certs = 2;
    optional bool Insecure = 3;
    // Used in tests.
    optional string Hostname = 4;
    required KeepAliveConfig KeepAlive = 5;
}

////////////////////////////////////////////////////////////////////////////////

message ServerConfig {
    optional GrpcConfig GrpcConfig = 1;
    required tasks.TasksConfig TasksConfig = 2;
    optional nbs.ClientConfig NbsConfig = 3;
    optional pools.PoolsConfig PoolsConfig = 4;
    optional images.ImagesConfig ImagesConfig = 5;
    optional snapshots.SnapshotsConfig SnapshotsConfig = 6;
    required logging.LoggingConfig LoggingConfig = 7;
    required monitoring.MonitoringConfig MonitoringConfig = 8;
    required auth.AuthConfig AuthConfig = 9;
    required persistence.PersistenceConfig PersistenceConfig = 10;
    optional disks.DisksConfig DisksConfig = 11;
    optional nfs.ClientConfig NfsConfig = 12;
    optional filesystem.FilesystemConfig FilesystemConfig = 13;
    optional placementgroup.Config PlacementGroupConfig = 14;
    optional dataplane.DataplaneConfig DataplaneConfig = 15;
    optional performance.PerformanceConfig PerformanceConfig = 16;
    optional bool LockProcessMemory = 17 [default = true];
    optional tracing.TracingConfig TracingConfig = 18;
}
